# mygemini-mcp

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  GPT5Plan.md  MyGemini MCP Server Specification 1.0.md  Quickstart.md  README.md  env.sample  example_gemini_implementation.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
TestScripts/: 1_Test-Connection.ps1  2_Test-ToolCall.ps1  3_HealthCheck.bat
client/: mcp_config.json
openspec/: project.md
openspec/specs/: resilience.md  routing.md
src/: __init__.py
src/clients/: gemini.py
src/config/: settings.py
src/models/: jsonrpc.py
src/server/: __init__.py  app.py  mcp_handler.py  security.py
src/server/tools/: echo.py  health.py  registry.py
tests/: conftest.py  test_mcp.py  test_mcp_errors.py  test_security.py
